# bitsink

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/bitsink/: cli.rs  mod.rs
src/bitsink/auth/: jwt.rs
src/bitsink/collection/: collection.rs  field.rs  mod.rs
src/bitsink/project/: mod.rs
