[package]
name = "bitsink"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitsink"
path = "src/lib.rs"

[[bin]]
name = "bitsink"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# fork = "0.2"
anyhow = "1"
axum = { version = "0.7", features = [] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
# toml = { version = "0.8", features = [] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
# secrecy = "0.10"
ring = "0.17"
base64 = "0.22"
directories = "5"
dialoguer = "0.11"
console = "0.15"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.